# crystopo

./: README.md  benchmark.py  config.json  pyproject.toml  runner.py
Examples/Betti-Curves/B0/: CdTe_mp-406.cif.npy  GaN_mp-830.cif.npy  LiF_mp-1138.cif.npy  NaCl_mp-22862.cif.npy
Examples/Betti-Curves/B1/: CdTe_mp-406.cif.npy  GaN_mp-830.cif.npy  LiF_mp-1138.cif.npy  NaCl_mp-22862.cif.npy
Examples/Betti-Curves/B2/: CdTe_mp-406.cif.npy  GaN_mp-830.cif.npy  LiF_mp-1138.cif.npy  NaCl_mp-22862.cif.npy
Examples/Charge-Densities/: AgBr_mp-866291.pickle  BaO_mp-1342.pickle  CdTe_mp-406.pickle  GaN_mp-830.pickle  LiF_mp-1138.pickle  MgS_mp-13032.pickle  NaCl_mp-22862.pickle  SrO_mp-2472.pickle
crystopo/: __init__.py  mp_api.py
crystopo/classification/: __init__.py  classifier.py
crystopo/core/: analyzer.py  calculator.py  config.py  types.py
crystopo/vis/: embedding.py  visualizer.py
