[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crystopo"
version = "0.1.0"
description = "A package for topological analysis of crystal structures"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "matplotlib",
    "mplcursors",
    "scikit-learn",
    "pymatgen",
    "mp-api",
    "joblib",
    "python-dotenv",
    "gudhi",
    "umap",
    "dscribe",
    "chgnet",
    "skipatom",
    "matminer",
    "mace-torch"
]

[tool.setuptools]
packages = ["crystopo"]
