[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crystopo"
version = "1.0.0"
description = "A package for topological analysis of crystal structures"
authors = [
    {name = "Nathan Szymanski", email = "nszymans@umn.edu"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "matplotlib",
    "mplcursors",
    "scikit-learn",
    "pymatgen",
    "mp-api",
    "joblib",
    "python-dotenv",
    "gudhi",
    "umap",
    "dscribe",
    "chgnet",
    "skipatom",
    "matminer",
    "mace-torch"
]

[tool.setuptools]
packages = ["crystopo"]
